added values to application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ server.servlet.context-path=/boc-trigger
 
 boc.login.id=sgintnet
 boc.password=sg78@789
+boc.core.url=http://127.0.0.1:8790/boc-api/boc/post
